--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,13 @@
-<div class="container-fluid p-o">
-  <div class="row">
+<div class="container-fluid">
 
-    <div class="p-4" [ngClass]="widthMain">
-      <router-outlet></router-outlet>
-    </div>
+  <div class="float-left" [ngClass]="widthMain">
+    <router-outlet></router-outlet>
+  </div>
 
-    <div class="drag-bar" [ngStyle]="{'width.%': 1}" (click)="handleClickEvent($event, 'left')" (contextmenu)="handleClickEvent($event, 'right')"></div>
+  <div class="vh-100 float-right" [ngClass]="widthSidebar">
 
-    <div class="vh-100 pt-3 pl-0 pr-0" [ngStyle]="{'background-color': '#d0d0d0'}" [ngClass]="widthSidebar">
-
-      <ul class="nav nav-tabs">
-
-        <li class="nav-item pl-2">
+      <ul class="nav nav-tabs mt-2 ml-1">
+        <li class="nav-item">
           <a class="nav-link text-black-50" [routerLink]="['', { outlets: {sidebar: ['manage']} }]"
              routerLinkActive="active">{{'NAV_MANAGE'|translate}}</a>
         </li>
@@ -26,13 +22,11 @@
              routerLinkActive="active" data-toggle="tooltip" data-placement="bottom"
              title="{{'NAV_COMPARE_TT_INFO' | translate}}">{{'NAV_COMPARE'|translate}}</a>
         </li>
-
       </ul>
-
-      <div class="vh-100 bg-white p-2 border-left">
-        <router-outlet name="sidebar"></router-outlet>
-      </div>
-
-    </div>
+      <router-outlet name="sidebar"></router-outlet>
   </div>
+
+  <div class="vh-100 drag-bar float-right" (click)="handleClickEvent($event, 'left')"
+       (contextmenu)="handleClickEvent($event, 'right')">&nbsp;</div>
+
 </div>
