--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
-.drag-bar:hover {
+.drag-bar {
   background-color: green;
-  visibility: initial;
+  cursor: pointer;
+  width: 15px;
+  min-height: 100%;
 }
 
 .width-9 {
