--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,68 +1,72 @@
 .drag-bar {
-  background-color: green;
+  background-color: #d8d8d8;
   cursor: pointer;
-  width: 15px;
+  width: 1%;
   min-height: 100%;
 }
 
-.width-9 {
-  width: 9%;
+.drag-bar:hover {
+  background-color: green;
+}
+
+.width-8 {
+  width: 8%;
 }
 .width-10 {
   width: 10%;
 }
 
-.width-19 {
-  width: 19%;
+.width-18 {
+  width: 18%;
 }
 .width-20 {
   width: 20%;
 }
 
-.width-29 {
-  width: 29%;
+.width-28 {
+  width: 28%;
 }
 .width-30 {
   width: 30%;
 }
 
-.width-39 {
-  width: 39%;
+.width-38 {
+  width: 38%;
 }
 .width-40 {
   width: 40%;
 }
 
-.width-49 {
-  width: 49%;
+.width-48 {
+  width: 48%;
 }
 .width-50 {
   width: 50%;
 }
 
-.width-59 {
-  width: 59%;
+.width-58 {
+  width: 58%;
 }
 .width-60 {
   width: 60%;
 }
 
-.width-69 {
-  width: 69%;
+.width-68 {
+  width: 68%;
 }
 .width-70 {
   width: 70%;
 }
 
-.width-79 {
-  width: 79%;
+.width-78 {
+  width: 78%;
 }
 .width-80 {
   width: 80%;
 }
 
-.width-89 {
-  width: 90%;
+.width-88 {
+  width: 88%;
 }
 .width-90 {
   width: 90%;
