--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -4,9 +4,6 @@
 
   <hr>
 
-<!--  todo display continuous mappings in graph or color gradient -->
-<!--  todo and corresponding data in table layout -->
-
   <table *ngIf="selectedMapping.chartValid" class="table table-bordered">
     <thead>
     <tr>
@@ -14,12 +11,36 @@
       <th>{{selectedMapping.title[0]}}</th>
     </tr>
     </thead>
+    <tbody>
     <tr *ngFor="let entry of selectedMapping.chart.lineChartData[0].data; let i = index">
       <td *ngIf="i === 0">&lt;</td>
       <td *ngIf="i === selectedMapping.chart.lineChartLabels.length - 1">&gt;</td>
       <td *ngIf="i > 0 && i < selectedMapping.chart.lineChartLabels.length - 1">{{selectedMapping.chart.lineChartLabels[i]}}</td>
       <td>{{entry}}</td>
     </tr>
+    </tbody>
+  </table>
+
+  <table *ngIf="selectedMapping.gradientValid" class="table table-bordered">
+    <thead>
+    <tr>
+      <th>{{selectedMapping.title[1]}}</th>
+      <th>{{selectedMapping.title[0]}}</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let entry of selectedMapping.colorGradient; let i = index">
+      <td *ngIf="i === 0">&lt;</td>
+      <td *ngIf="i === selectedMapping.colorGradient.length - 1">&gt;</td>
+      <td *ngIf="i > 0 && i < selectedMapping.colorGradient.length - 1">
+        {{entry.numericThreshold}}
+      </td>
+      <td>
+        {{entry.color}}
+        <span class="badge badge-pill border" [ngStyle]="{'background-color': entry.color}">&nbsp;</span>
+      </td>
+    </tr>
+    </tbody>
   </table>
 
 
