--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -1,6 +1,6 @@
 <div class="p-2">
 
-  <h5>{{'SIDEBAR_EDIT_DESCRIPTION_TITLE' | translate}}</h5>
+  <h5 *ngIf="selectedNetwork.networkInformation.description">{{'SIDEBAR_EDIT_DESCRIPTION_TITLE' | translate}}</h5>
 
   <div *ngIf="selectedNetwork.networkInformation.description">
     <p [innerHTML]="selectedNetwork.networkInformation.description"></p>
