--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -46,34 +46,77 @@
   </div>
 
   <div *ngIf="graphService.selectedElements.nodes.length > 0 || graphService.selectedElements.edges.length > 0">
-    <h5 *ngIf="graphService.selectedElements.nodes.length > 0" class="mt-2">{{'SIDEBAR_EDIT_COMPARISON_NODES' | translate}}</h5>
-    <table *ngIf="graphService.selectedElements.nodes.length > 0">
+
+    <!-- Display selected nodes -->
+    <h5 *ngIf="graphService.selectedElements.nodes.length > 0">{{'SIDEBAR_EDIT_COMPARISON_NODES' | translate}}</h5>
+
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="{{showAllForNodes}}" id="showNodesAttributes"
+             (click)="showAllNodesAttributes(!showAllForNodes)">
+      <label class="form-check-label" for="showNodesAttributes">
+        {{'SIDEBAR_EDIT_CB_NODES_ATTRIBUTES' | translate}}
+      </label>
+    </div>
+
+    <table *ngIf="graphService.selectedElements.nodes.length > 0" class="table table-bordered">
       <thead>
         <th>{{'SIDEBAR_EDIT_COMPARISON_NODE_NAME' | translate}}</th>
         <th>{{'SIDEBAR_EDIT_COMPARISON_NODE_ATTRIBUTES' | translate}}</th>
       </thead>
-      <tr *ngFor="let node of graphService.selectedElements.nodes">
-        <td>{{node.name}}</td>
-        <td *ngFor="let attribute of node.attributes">
-          <b>{{attribute.keyHR}}</b>: {{attribute.valueHR}}
-        </td>
-      </tr>
+      <tbody>
+        <tr *ngFor="let node of graphService.selectedElements.nodes">
+          <td>
+            <a role="button" (click)="showAttributesForId(node.id)">{{node.name}}</a>
+          </td>
+          <td *ngIf="showAttributesFor === node.id || showAllForNodes">
+            <table class="table table-borderless">
+              <tr *ngFor="let attribute of node.attributes">
+                <td><b>{{attribute.keyHR}}</b></td>
+                <td>{{attribute.valueHR}}</td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </tbody>
     </table>
 
-    <h5 *ngIf="graphService.selectedElements.edges.length > 0" class="mt-2">{{'SIDEBAR_EDIT_COMPARISON_EDGES' | translate}}</h5>
-    <table *ngIf="graphService.selectedElements.edges.length > 0">
+    <hr>
+
+    <!-- Display selected edges -->
+    <h5 *ngIf="graphService.selectedElements.nodes.length > 0">{{'SIDEBAR_EDIT_COMPARISON_EDGES' | translate}}</h5>
+
+    <div class="form-check form-inline">
+      <input class="form-check-input" type="checkbox" value="{{showAllForEdges}}" id="showEdgesAttributes"
+             (click)="showAllEdgesAttributes(!showAllForEdges)">
+      <label class="form-check-label" for="showEdgesAttributes">
+        {{'SIDEBAR_EDIT_CB_EDGES_ATTRIBUTES' | translate}}
+      </label>
+    </div>
+
+    <table *ngIf="graphService.selectedElements.edges.length > 0" class="table table-bordered">
       <thead>
-      <th>{{'SIDEBAR_EDIT_COMPARISON_EDGE_NAME' | translate}}</th>
-      <th>{{'SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES' | translate}}</th>
+        <th>{{'SIDEBAR_EDIT_COMPARISON_EDGE_NAME' | translate}}</th>
+        <th>{{'SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES' | translate}}</th>
       </thead>
-      <tr *ngFor="let edge of graphService.selectedElements.edges">
-        <td>{{edge.name}}</td>
-        <td *ngFor="let attribute of edge.attributes">
-          <b>{{attribute.keyHR}}</b>: {{attribute.valueHR}}
-        </td>
-      </tr>
+      <tbody>
+        <tr *ngFor="let edge of graphService.selectedElements.edges">
+          <td>
+            <a role="button" (click)="showAttributesForId(edge.id)">{{edge.id}}</a>
+          </td>
+          <td *ngIf="showAttributesFor === edge.id || showAllForEdges">
+            <table class="table table-borderless">
+              <tr *ngFor="let attribute of edge.attributes">
+                <td><b>{{attribute.keyHR}}</b></td>
+                <td>{{attribute.valueHR}}</td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </tbody>
     </table>
+
   </div>
+
 
   <div class="nav nav-pills flex-row" id="editsNav" role="tablist" aria-orientation="horizontal">
     <a class="nav-link active" id="editsNavAspects" data-toggle="pill" href="#editsNavAspectsContent" role="tab"
